Update28/08 01-Rear-lights.html

--- a/01-Rear-lights.html
+++ b/01-Rear-lights.html
@@ -60,7 +60,7 @@
     Keep in mind that the back light is meant to be reflective and make you noticeable to a driver,
     letting them know you're there before they get close, particularly if a reflector is fastened to it.  
     A rear light is your beacon on the road, alerting motorists and fellow cyclists to your presence. 
-    It significantly reduces the chances of accidents caused by rear-end collisions, making your ride safer.</p>
+    It significantly reduces the chances of accidents caused by rear-end collisions, making your ride safer.</p> </div>
 
     <p> When cycling at night, visibility is significantly reduced. 
       A rear light helps illuminate your bike and your surroundings, allowing others to spot you from a distance and react accordingly.
@@ -89,7 +89,7 @@
 </ul>
 
 <p class="pageHeadings">Conclusion</p>
-
+<div>
 <p>Bicycle rear lights are not just accessories;
  they are essential tools that contribute significantly to your safety while cycling. 
  Their role in improving visibility, especially in low-light conditions, cannot be overstated. 
