--- a/00-All-posts.html
+++ b/00-All-posts.html
@@ -5,10 +5,11 @@
     <style>
 body {
     font-family: Arial, sans-serif;
-    background-color: #1c1c1c;
+    background: black;
     color: #ffffff;
     margin: 0;
     padding: 0;
+    font-weight: bold;
   }
 
   h1 {
