--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     margin: 0 auto;
     width: 300px;
     border-radius: 10px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 6px rgb(0, 0, 0, 0.1);
   }
 
   p {
