--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 </head>
 <body>
 <h1>Welcome To Nigeria Cycling Embassy</h1>
-<img src="https://scontent.flos1-2.fna.fbcdn.net/v/t39.30808-6/307170009_483677930440260_7338510651950627608_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=2S7lUgwDHEMAX_XRNnI&_nc_zt=23&_nc_ht=scontent.flos1-2.fna&oh=00_AfA4_6HiKatCtoVK8l2_sAqtGDqMvyXF25GNqG7ulEFgaA&oe=64E7C1B6" alt="Cycling Image">
+<img src="https://scontent.flos1-2.fna.fbcdn.net/v/t39.30808-6/307170009_483677930440260_7338510651950627608_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=09cbfe&_nc_eui2=AeHJmXcX0H-KYcs4T_NQ8IGpGdLnVWnsCY0Z0udVaewJjfouED2q2oM1NK-dRipKID1P3BWMRRCUX3iubnrThUer&_nc_ohc=okdh7FRebQ4AX9vtlLg&_nc_oc=AQlweHkmUgxuAwhUCl-UBZd3fQTcAMsCfu2mZOJ2lR8fRf_t9Y6urgQVzLH36ajeHS0&_nc_zt=23&_nc_ht=scontent.flos1-2.fna&oh=00_AfC4EhOLi90iJwGhOJmdmYme_BsYZQeJ7JkJBtNL5yrWCQ&oe=64F1A4F6" alt="Cycling Image">
 <p>Cycling is the most efficient form of transport and all cyclists have the right to use the road just like any other vehicle.</p>
 <p>However, this means that cyclists must learn the road rules and signals to keep themselves and other road users safe from unwanted incidents.</p>
 <p>At Nigeria Cycling Embassy, we are committed to creating a strong cycling community in Nigeria and empowering cyclists in Nigeria with important information.</p>
