Deleted the olderfiles

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <div class="welcomeAddress"></div>
 <img src="main-image.jpg" class="mainImage" alt="Cycling Image">
 <p>Cycling is the most efficient form of transport and all cyclists have the right to use the road just like any other vehicle.</p>
-<p>However, this means that cyclists must learn the road rules and signals to keep themselves and other road users safe from unwanted incidents.</p>
+<p> This means that cyclists must learn the road rules and signals to keep themselves and other road users safe from unwanted incidents.</p>
 <p>At Nigeria Cycling Embassy, we are committed to creating a strong cycling community in Nigeria and empowering cyclists in Nigeria with important information.</p>
 <p>To be safe and efficient</p>
 <p>You can read more posts about Nigeria cycling <a class="postLink" href="00-All-posts.html">here</a></p>
