--- a/00-All-posts.html
+++ b/00-All-posts.html
@@ -131,7 +131,11 @@ body {
   <div><p><a class="homePagePosts" href="12-Reflective-Clothing.html">Reflective Clothing</a></p> </div>
                   
   <div><p><a class="homePagePosts" href="13-Reflective-Stickers.html"> Reflective Stickers</a></p> </div>
+
+  <div><p><a class="homePagePosts" href="14-Cycling-Lagos-2023.html"> Cycling Lagos 2023 </a></p></div>
 </body> 
 </div>
+
+<h1>More Posts Coming Soon</h1>
 
 </html>
