--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
 </head>
 <body>
 <h1>Welcome To Nigeria Cycling Embassy</h1>
+<script async src="https://cse.google.com/cse.js?cx=60b3cb1f1abb4463e">
+</script>
+<div class="gcse-search"></div>
 
 <div class="navigationBar">
   <a class="pageLinks" href="index.html"> <p class="listElements1"> Home</p></a>
