--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head> 
 <title>Welcome To Nigeria Cycling Embassy</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <link rel="icon" href="main-image.jpg" type="NCElogo">
 
 
