--- a/02-Head-lights.html
+++ b/02-Head-lights.html
@@ -3,6 +3,8 @@
 <html>
 <head> 
 <title>Head Lights | Nigeria Cycling Embassy </title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <style> 
 .pageContent {
     background: black;
