--- a/14-Cycling-Lagos-2023.html
+++ b/14-Cycling-Lagos-2023.html
@@ -2,7 +2,8 @@
 
 <html>
 <head> 
-
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Cycling Lagos 2023 | Nigeria Cycling Embassy </title>
 <style> 
 
 
