--- a/01-Rear-lights.html
+++ b/01-Rear-lights.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <title>The Rear Lights | Nigeria Cycling Embassy</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <style>
   body {
     font-family: Arial, sans-serif;
