--- a/05-Tubeless-tires-flats.html
+++ b/05-Tubeless-tires-flats.html
@@ -3,6 +3,8 @@
 <head>
 
 <title>Tubeless Tires | Nigeria Cycling Embassy</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <style>
     
   body {
