--- a/07-Tire-maintenance.html
+++ b/07-Tire-maintenance.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <title>Tire Maintenance | Nigeria Cycling Embassy</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <style>
   body {
     font-family: Arial, sans-serif;
