--- a/08-Brakes.html
+++ b/08-Brakes.html
@@ -3,6 +3,8 @@
 <html>
 <head> 
 <title>Brakes | Nigeria Cycling Embassy</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <style> 
 
 
