--- a/10-Clincher-Tires.html
+++ b/10-Clincher-Tires.html
@@ -4,6 +4,8 @@
 <head> 
 
 <title>Clincher Tires | Nigeria Cycling Embassy </title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 
 <style> 
 
