--- a/11-Cycling-Shoes.html
+++ b/11-Cycling-Shoes.html
@@ -4,6 +4,8 @@
     <head>
         <title>Cycling Shoes | Nigeria Cycling Embassy</title>
         <link href="base.css" rel="stylesheet">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
     </head>
     
     <body>
