--- a/12-Reflective-Clothing.html
+++ b/12-Reflective-Clothing.html
@@ -2,9 +2,10 @@
 
 <html>
 <head> 
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title> Reflective Clothing | Nigeria Cycling Embassy </title>
 
 <style> 
-
 
 
 </style>
