--- a/04-Helmets.html
+++ b/04-Helmets.html
@@ -39,6 +39,7 @@
 .imageContainer {
   max-width: 600px;
   height: 500px;
+  object-fit: contain;
   overflow: hidden;
 }
   .highlight {
@@ -51,7 +52,11 @@
   }
 
   .helmetImage {
-    width:100%;
+    width: 300px;
+    height:300px;
+    object-fit: cover;
+    object-position: right;
+    padding-left: 200px;
 
   }
   .manImage {
