Optimised CSS code. Optimised HTML code. Optimised Images for faster loading times and better sizing. Structured the Page adding content for better viewing. Edited font sizes and font family. Added an about us Page.

--- a/13-Reflective-Stickers.html
+++ b/13-Reflective-Stickers.html
@@ -18,6 +18,17 @@
 
 <body>
 
+  <nav class="navigationBar">
+    <a class="pageLinks" href="index.html"> <p class="listElements1"> Home</p></a>
+    <a class="pageLinks" href="00-All-posts.html"><p class="listElements2">Posts </p></a>
+    <a class="pageLinks"> <p class="listElements3">Contact Us</p></a>
+    <a class="pageLinks" href="About-us.html"> <p class="listElements4">About</p></a>
+  </nav>
+
+  <div class="content">
+
+  
+
     <h1>Reflective Stickers</h1>
 
     <p class="subHeadings2"> So you don't like the idea of reflective vests
@@ -65,6 +76,7 @@
     
     So, fellow riders, if you want to be the talk of the town without saying a word,
     slap on those creative reflective stickers and let the your bike make heads roll!</p>
+  </div>
 
 </body>
 
