Added Two New Posts: Modified CSS file for better image viewing Added some images as well

--- a/00-All-posts.html
+++ b/00-All-posts.html
@@ -143,7 +143,9 @@ body {
 
   <div><p><a class="homePagePosts" href="14-Cycling-Lagos-2023.html"> Cycling Lagos 2023 </a></p>
    </div>
-
+   
+   <div><p><a class="homePagePosts" href="15-How-To-Maintain-Your-Bicycle.html"> How To Maintain Your Bicycle Like a Pro </a></p>
+   </div>
 </div>
 
 <h1>More Posts Coming Soon</h1>
