--- a/07-Tire-maintenance.html
+++ b/07-Tire-maintenance.html
@@ -129,7 +129,7 @@
     but also contribute to a safer and more enjoyable cycling journey.
     Remember, taking care of your bike's rubber companions is like investing in countless joyful rides.
     Inflate with care, inspect like a pro, and pack that spare – because a well-loved tire is a happy tire,
-    and a happy rider.</p>
+    and a happy rider. Happy riding, my tire-iffic friends!</p>
 </div>
 
 </body>
