Optimised more posts

--- a/04-Helmets.html
+++ b/04-Helmets.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Helmet | Nigeria Cycling Embassy</title>
+<title> Helmet | Nigeria Cycling Embassy</title>
 <link href="base.css" rel="stylesheet">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -24,7 +24,7 @@
       <p class="subHeadings1">THE Magical Bike Helmet</p>
 
       <div class="wrapImages">
-      <img src="black-helmet.jpg" alt="black helmet image" loading="lazy">
+      <img src="black-helmet-1.jpg" alt="man and son riding" loading="lazy">
     </div>
 
       <p>It is one of the hottest questions in the Global cycling community.
