--- a/08-Brakes.html
+++ b/08-Brakes.html
@@ -33,7 +33,7 @@
 
     <div class="wrapImages">
    <p>
-    <img src="brake-lever.jpg" alt="brake levers">
+    <img src="front-brake-levers.jpg" alt="front brake levers of bicycle">
 </p>
 </div>
     <p>
@@ -49,7 +49,7 @@
     <p class="subHeadings1"> RIM BRAKES: WHERE IT ALL BEGAN </p>
 
     <div class="wrapImages">
-    <img src="front-rim-brake.jpg" alt="front rim brake">
+    <img src="rim-brakes.jpg" alt="rim brakes">
     </div>
 
     <p class="subHeadings2">Rim brakes are the OGs of bike stopping mechanisms. 
@@ -106,7 +106,7 @@
     
     <p class="subHeadings1">DISC BRAKES - THE SUPERHEROES OF STOPPING</p>
     <div class="wrapImages">
-    <img class="smallImage" src="disc-brake.jpg" alt="disc brake">
+    <img src="disc-brake.jpg" alt="disc brake">
     </div>
     
    <p class="subHeadings2"> Now, meet the action heroes – the disc brakes! 
