--- a/00-All-posts.html
+++ b/00-All-posts.html
@@ -77,6 +77,15 @@ body {
   }
 
     </style>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-S1BN4K9VV8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-S1BN4K9VV8');
+</script>
 
     <link href="base.css" rel="stylesheet">
 
