--- a/04-Helmets.html
+++ b/04-Helmets.html
@@ -7,6 +7,15 @@
 
 <style>
 </style>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-S1BN4K9VV8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-S1BN4K9VV8');
+</script>
 </head>
 <body>
 
