--- a/07-Tire-maintenance.html
+++ b/07-Tire-maintenance.html
@@ -42,6 +42,15 @@
   }
 </style>
 <link href="base.css" rel="stylesheet">
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-S1BN4K9VV8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-S1BN4K9VV8');
+</script>
 </head>
 <body>
 
