--- a/11-Cycling-Shoes.html
+++ b/11-Cycling-Shoes.html
@@ -2,9 +2,19 @@
     <html>
     
     <head>
-        <title>Cycling Shoes | Nigeria Cycling Embassy</title>
+        <title> Cycling Shoes | Nigeria Cycling Embassy</title>
         <link href="base.css" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-S1BN4K9VV8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-S1BN4K9VV8');
+</script>
 
     </head>
     
