--- a/12-Reflective-Clothing.html
+++ b/12-Reflective-Clothing.html
@@ -5,6 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title> Reflective Clothing | Nigeria Cycling Embassy </title>
 
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-S1BN4K9VV8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-S1BN4K9VV8');
+</script>
+
 <style> 
 
 
