--- a/15-How-To-Maintain-Your-Bicycle.html
+++ b/15-How-To-Maintain-Your-Bicycle.html
@@ -8,6 +8,16 @@ Bicycle Flats | Nigeria Cycling Embassy
     </title>
 
     <link rel="stylesheet" href="base.css">
+
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-S1BN4K9VV8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-S1BN4K9VV8');
+</script>
 </head>
 
 
