--- a/About-us.html
+++ b/About-us.html
@@ -9,6 +9,16 @@
  
     <link rel="stylesheet" href="base.css">
 
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-S1BN4K9VV8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-S1BN4K9VV8');
+</script>
+
 </head>
 
 
