--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
 
 <link rel="icon" href="main-image.jpg" type="NCElogo">
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-S1BN4K9VV8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-S1BN4K9VV8');
+</script>
 
 <style>
  
