Added and activated about us link for Index.html

--- a/About-us.html
+++ b/About-us.html
@@ -21,11 +21,21 @@
 
 </head>
 
+<body>
+
+    <nav class="navigationBar">
+        <a class="pageLinks" href="index.html"> <p class="listElements1"> Home</p></a>
+        <a class="pageLinks" href="00-All-posts.html"><p class="listElements2">Posts </p></a>
+        <a class="pageLinks"> <p class="listElements3">Contact Us</p></a>
+        <a class="pageLinks" href="About-us.html"> <p class="listElements4">About</p></a>
+      </nav>
+      
+
 
 <div class="content">
 <p>At Nigeria Cycling Embassy(NCE), our mission is to promote a cleaner, greener, healthier 
 and a more sustainable environment, both in the urban and the rural landscapes of Nigeria. 
-NCE through the promotion of alternative transport method -most important of them cycling- seeks to improve 
+NCE, through the promotion of alternative transport methods -most important of them, cycling- seeks to improve 
 the quality of Nigerians by encouraging active lifestyles, promote sustainable transport infrastructure and
  awareness of sustainable transport throughout the community while improving the environmental and social quality of Nigeria. </p>
 
@@ -60,9 +70,6 @@ Rapid urbanisation poses significant challenges in Nigeria, particularly in the 
 
 
 <p>In summary, our mission is simple: Get as many Nigerians on their bike as possible.</p>
-
-
-
 
 
 
