--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <a class="pageLinks" href="index.html"> <p class="listElements1"> Home</p></a>
   <a class="pageLinks" href="00-All-posts.html"><p class="listElements2">Posts </p></a>
   <a class="pageLinks"> <p class="listElements3">Contact Us</p></a>
-  <a class="pageLinks"> <p class="listElements4">About</p></a>
+  <a class="pageLinks" href="About-us.html"> <p class="listElements4">About</p></a>
 </div>
 
 <div class="welcomeAddress"></div>
