Edited the images in the latest post

--- a/15-How-To-Maintain-Your-Bicycle.html
+++ b/15-How-To-Maintain-Your-Bicycle.html
@@ -179,14 +179,14 @@ Bicycle Flats | Nigeria Cycling Embassy
         For reference, your cassette should look more like this:
      </p>
 
-     <div class="wrapPostImages">
+     <div class="wrapImages">
         <img src="New-chain-set.png" alt="new chain set">
      </div>
 
      <p> 
         And not like this:
      </p>
-     <div class="wrapPostImages">
+     <div class="wrapImages">
         <img src="Worn-out-bike-cassette-teeth.png">
      </div>
       
@@ -226,7 +226,7 @@ A quick look at the bike frame should do. <em>Especially true for carbon and alu
  If you spot any suspicious cracks, dents, or signs of distress, 
  don't just ignore or give it a band-aid and hope for the best. </p>
 
- <div class="wrapPostImages">
+ <div class="wrapImages">
     <img src="broken-frame-1.jpg">
  </div>
 
