added post to all posts

--- a/00-All-posts.html
+++ b/00-All-posts.html
@@ -113,6 +113,9 @@ body {
 
  <div class="firstSet"> 
 
+  <div><p><a class="homePagePosts" href="16-How-To-Win-A-Cycling-Race.html"> How To Win Your Next Cycling Race </a></p>
+  </div>
+
   <div><p><a class="homePagePosts" href="04-Helmets.html"> Helmets</a></p> 
    </div>
 
@@ -157,6 +160,7 @@ body {
    
    <div><p><a class="homePagePosts" href="15-How-To-Maintain-Your-Bicycle.html"> How To Maintain Your Bicycle Like a Pro </a></p>
    </div>
+
 </div>
 
 <h1>More Posts Coming Soon</h1>
