Added logo to all the pages

--- a/01-Rear-lights.html
+++ b/01-Rear-lights.html
@@ -47,6 +47,8 @@
  
 </style>
 
+<link rel="icon" href="main-image.jpg" type="NCElogo">
+
 <link href="base.css" rel="stylesheet">
 
 <!-- Google tag (gtag.js) -->
@@ -103,8 +105,6 @@
 
     
 <p class="pageHeadings"> Choosing the Right Rear Light</p>
-
-<ul></ul>
 
 <ul class="pageList">
   <li><strong>Brightness:</strong> Look for a rear light with sufficient brightness and various modes for visibility.</li>
