--- a/02-Head-lights.html
+++ b/02-Head-lights.html
@@ -8,6 +8,8 @@
 <style> 
 </style>
 
+<link rel="icon" href="main-image.jpg" type="NCElogo">
+
 <link href="base.css" rel="stylesheet">
 
 <!-- Google tag (gtag.js) -->
@@ -32,7 +34,7 @@
 </div>
 
 <div class="content">
-    <h1>THE HEAD LIGHTS</h1>
+    <h1>The Head Lights</h1>
 
     <div class="wrapImages">
     <img src="images/night-cycling.webp" alt="night cycling image">
