--- a/04-Helmets.html
+++ b/04-Helmets.html
@@ -3,6 +3,7 @@
 <head>
 <title> Helmet | Nigeria Cycling Embassy</title>
 <link href="base.css" rel="stylesheet">
+<link rel="icon" href="main-image.jpg" type="NCElogo">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <style>
