--- a/06-Tubular-tires.html
+++ b/06-Tubular-tires.html
@@ -7,6 +7,7 @@
 <style>
 
 </style>
+<link rel="icon" href="main-image.jpg" type="NCElogo">
 <link rel="stylesheet" href="base.css">
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-S1BN4K9VV8"></script>
