--- a/08-Brakes.html
+++ b/08-Brakes.html
@@ -10,6 +10,7 @@
 
 
 </style>
+<link rel="icon" href="main-image.jpg" type="NCElogo">
 
 <link href="base.css" rel="stylesheet">
 <!-- Google tag (gtag.js) -->
