--- a/10-Clincher-Tires.html
+++ b/10-Clincher-Tires.html
@@ -5,6 +5,7 @@
 
 <title>Clincher Tires | Nigeria Cycling Embassy </title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="icon" href="main-image.jpg" type="NCElogo">
 
 
 <style> 
