--- a/11-Cycling-Shoes.html
+++ b/11-Cycling-Shoes.html
@@ -3,6 +3,7 @@
     
     <head>
         <title> Cycling Shoes | Nigeria Cycling Embassy</title>
+        <link rel="icon" href="main-image.jpg" type="NCElogo">
         <link href="base.css" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
