--- a/16-How-To-Win-A-Cycling-Race.html
+++ b/16-How-To-Win-A-Cycling-Race.html
@@ -7,6 +7,7 @@ How To Win A Cycling Race | Nigeria Cycling Embassy
     </title>
 
     <link rel="icon" href="images/main-image.jpg" type="NCElogo">
+    <link rel="icon" href="main-image.jpg" type="NCElogo">
 
     <link rel="stylesheet" href="base.css">
 
