--- a/03-Gravel-bikes.html
+++ b/03-Gravel-bikes.html
@@ -8,6 +8,8 @@
 
 </style>
 
+<link rel="icon" href="main-image.jpg" type="NCElogo">
+
 <link href="base.css" rel="stylesheet">
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-S1BN4K9VV8"></script>
