--- a/07-Tire-maintenance.html
+++ b/07-Tire-maintenance.html
@@ -3,6 +3,7 @@
 <head>
 <title> Tire Maintenance | Nigeria Cycling Embassy</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="icon" href="main-image.jpg" type="NCElogo">
 
 <style>
   body {
