--- a/09-Bicycle-Tires.html
+++ b/09-Bicycle-Tires.html
@@ -12,6 +12,7 @@
 </style>
 
 <link href="base.css" rel="stylesheet">
+<link rel="icon" href="main-image.jpg" type="NCElogo">
 
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-S1BN4K9VV8"></script>
