--- a/12-Reflective-Clothing.html
+++ b/12-Reflective-Clothing.html
@@ -4,6 +4,7 @@
 <head> 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title> Reflective Clothing | Nigeria Cycling Embassy </title>
+  <link rel="icon" href="main-image.jpg" type="NCElogo">
 
   <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-S1BN4K9VV8"></script>
