--- a/15-How-To-Maintain-Your-Bicycle.html
+++ b/15-How-To-Maintain-Your-Bicycle.html
@@ -8,6 +8,7 @@ Bicycle Flats | Nigeria Cycling Embassy
     </title>
 
     <link rel="stylesheet" href="base.css">
+    <link rel="icon" href="main-image.jpg" type="NCElogo">
 
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-S1BN4K9VV8"></script>
