--- a/About-us.html
+++ b/About-us.html
@@ -8,6 +8,7 @@
     </title>
  
     <link rel="stylesheet" href="base.css">
+    <link rel="icon" href="main-image.jpg" type="NCElogo">
 
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-S1BN4K9VV8"></script>
