--- a/00-All-posts.html
+++ b/00-All-posts.html
@@ -7,45 +7,11 @@
 <link rel="icon" href="main-image.jpg" type="NCElogo">
     <style>
 
-body {
-    font-family: Arial, sans-serif;
-    background-color: black;
-    color: #ffffff;
-    margin: 0;
-    padding: 0;
-  }
+h1 {
+  text-align: center;
+}
 
-  h1 {
-    text-align: center;
-    padding: 40px 0;
-    color: #007BFF;
-  }
-
-  a {
-    text-decoration: none;
-    color:blue;
-    font-weight: bold;
-  }
-
-  .homePageImage {
-    border-radius: 10px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  }
-
-  .homePageImageContainer {
-    width: 300px;
-    margin: 0 auto;
-  }
-
-  .lightsImage { 
-    width: 300px;
-  }
-
-  p {  
-    text-align: center;
-    line-height: 1.6;
-    margin: 20px 0;
-  }
+ 
 
   .homePagePosts {
     color: #107bee;
@@ -61,19 +27,9 @@ body {
   .firstSet {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    text-align: center;
   }
 
-  .renderImage {
-    border-radius: 14px;
-  }
-
-  .forGrid {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    max-width: 300px;
-    max-height: 300px;
-    border: 2px solid white;
-  }
 
     </style>
     <!-- Google tag (gtag.js) -->
@@ -104,21 +60,25 @@ body {
 
 
 
-  <div class="homePageImageContainer">
-<img src="images/main-image.jpg" class="homePageImage">
+  <div class="wrapImages">
+    
+<img src="images/main-image.jpg">
 
 </div>
 
 
  <div class="firstSet"> 
 
+  <div><p><a class="homePagePosts" href="15-How-To-Maintain-Your-Bicycle.html"> How To Maintain Your Bicycle Like a Pro </a></p>
+  </div>
+
   <div><p><a class="homePagePosts" href="16-How-To-Win-A-Cycling-Race.html"> How To Win Your Next Cycling Race </a></p>
   </div>
 
-  <div><p><a class="homePagePosts" href="04-Helmets.html"> Helmets</a></p> 
+  <div><p><a class="homePagePosts" href="04-Helmets.html"> The Helmets Debate</a></p> 
    </div>
 
-  <div><p><a class="homePagePosts" href="08-Brakes.html">Brakes</a></p> 
+  <div><p><a class="homePagePosts" href="08-Brakes.html"> Bicycle Brakes</a></p> 
    </div>
 
   <div><p><a class="homePagePosts" href="02-Head-lights.html"> Head Lights</a> </p></p> 
@@ -157,8 +117,7 @@ body {
   <div><p><a class="homePagePosts" href="14-Cycling-Lagos-2023.html"> Cycling Lagos 2023 </a></p>
    </div>
    
-   <div><p><a class="homePagePosts" href="15-How-To-Maintain-Your-Bicycle.html"> How To Maintain Your Bicycle Like a Pro </a></p>
-   </div>
+   
 
 </div>
 
